# rockserver

./: .gitignore  .gitmodules  AGENTS.md  CDC_AND_MERGE.adoc  README.md  debug-logging.properties  generate-api.sh  pom.xml  proxy-config.json  reflect-config.json
benchmarks/: fast-get-2026-07-20.csv  fast-get-2026-07-20.md  grpc-overload-2026-07-23.md
rust-client/: Cargo.toml  build.rs
rust-client/examples/: stream_messages.rs
rust-client/examples-runner/: Cargo.toml  build.rs
rust-client/examples-runner/src/: main.rs  query.rs
rust-client/examples/schema/: database-records.yaml
rust-client/proto/: rocksdb.proto
rust-client/src/: client.rs  lib.rs  types.rs
rust-client/src/datagen/: io.rs  mod.rs  types.rs
rust-client/tests/: api_check.rs  write_class.rs
src/fatjar/java/: module-info.java
src/main/filtered-resources/it/cavallium/rockserver/core/resources/: build.properties
src/main/java/: module-info.java
src/main/java/it/cavallium/rockserver/core/: Main.java  Migrate.java  TestGrpcLoop.java
src/main/java/it/cavallium/rockserver/core/client/: BaseConnection.java  ClientBuilder.java  CollectListMappedStreamObserver.java  CollectListStreamObserver.java  EmbeddedConnection.java  GrpcConnection.java  LoggingClient.java  RocksDBConnection.java  SocketConnection.java  SocketConnectionInet.java  SocketConnectionUnix.java  ThriftConnection.java
src/main/java/it/cavallium/rockserver/core/common/: Callback.java  CdcGapDetectedException.java  ColumnHashType.java  ColumnSchema.java  Delta.java  FirstAndLast.java  HashFunction.java  KV.java  KVBatch.java  Keys.java  MergeBatchMode.java  PutBatchMode.java  RequestType.java  RocksDBAPI.java  RocksDBAPICommand.java  RocksDBAsyncAPI.java  RocksDBAsyncAPIRequestHandler.java  RocksDBException.java  RocksDBRetryException.java  RocksDBSyncAPI.java  RocksDBSyncAPIRequestHandler.java  SerializationUtils.java  SerializedKVBatch.java  ThriftTransportLimits.java  UpdateContext.java  Utils.java  WriteClass.java
src/main/java/it/cavallium/rockserver/core/config/: BloomFilterConfig.java  ColumnLevelConfig.java  ConfigParser.java  ConfigPrinter.java  DataSize.java  DatabaseCompression.java  DatabaseConfig.java  DatabaseLevel.java  FallbackColumnConfig.java  FallbackColumnOptions.java  GlobalDatabaseConfig.java  InfluxMetricsConfig.java  JmxMetricsConfig.java  MetricsConfig.java  VolumeConfig.java  (+3 more)
src/main/java/it/cavallium/rockserver/examples/: CdcMergeExample.java  MessagePatchMergeOperator.java
src/main/proto/: rocksdb.proto
src/native/java/: module-info.java
src/native/java/it/cavallium/rockserver/core/: EmptyByteBufStub.java  JettyAlpnSslEngineSubstitutions.java  Log4J2LoggerSubstitutions.java
src/test/java/: module-info.java
(+216 files in other folders)
