[package]
name = "rockserver-client"
version = "0.1.0"
edition = "2021"
description = "Async Rust client for RockServer"
license = "MIT"
repository = "https://github.com/cavallium/rockserver"

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3"
bytes = "1.0"
async-stream = "0.3"

[build-dependencies]
tonic-build = "0.12"
